# skill-lint

./: CHANGELOG.md  NPM_PUBLISH_PERSONAL.md  PROJECT_SUMMARY.txt  README.md  README.zh.md  package.json  pyproject.toml
.github/workflows/: ci.yml
src/: parser.js  reporter.js  rules.js
src/openclaw_cli/: __init__.py  main.py  scaffold.py  validator.py
test/: integration.test.js  parser.test.js  reporter.test.js  rules.test.js
test/fixtures/: invalid-skill.md  valid-skill.md
tests/: __init__.py  test_scaffold.py  test_validator.py
