[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-cli"
version = "0.1.0"
description = "The developer toolkit for building OpenClaw plugins."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "OpenClawHQ Contributors", email = "dev@openclawHQ.com" }
]
keywords = ["openclaw", "plugins", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "tomli>=1.2.0; python_version < '3.11'",
]

[project.scripts]
openclaw = "openclaw_cli.main:app"

[project.urls]
Homepage = "https://github.com/OpenClawHQ/openclaw-cli"
Documentation = "https://github.com/OpenClawHQ/openclaw-cli"
Repository = "https://github.com/OpenClawHQ/openclaw-cli"
"Bug Tracker" = "https://github.com/OpenClawHQ/openclaw-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_cli"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["openclaw_cli"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-cov = "pytest --cov=src/openclaw_cli --cov-report=term-missing {args}"
lint = "ruff check src tests"
format = "ruff format src tests"
type = "mypy src"
